--- a/portfolio.html
+++ b/portfolio.html
@@ -46,14 +46,14 @@
                 <div class="col-sm-4">
                     <div class="projects">
                         <img src="assets/images/Hangman-icon.png" alt="Hangman">
-                        <h3>Hangman</h3>
+                        <a href="https://thomwint.github.io/Word-Guess-Game/" target="_blank"><h3>Hangman</h3></a>
                     </div>
                 </div>
                 <div class="col-sm-2"></div>
                 <div class="col-sm-4">
                     <div class="projects">
                         <img src="assets/images/rpglogo.png" alt="RPG">
-                        <h3>RPG Game</h3>
+                        <a href="https://thomwint.github.io/unit-4-game/" target="_blank"><h3>RPG Game</h3></a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <div class="col-sm-4">
                     <div class="projects">
                         <img src="assets/images/trivia-game-2-1.jpg" alt="Trivia">
-                        <h3>Trivia Game</h3>
+                        <a href="https://thomwint.github.io/TriviaGame/" target="_blank"><h3>Trivia Game</h3></a>
                     </div>
                 </div>
                 <div class="col-sm-2"></div>
