--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                 <div class="col-sm-4">
                     <div class="projects">
                         <img src="assets/images/rutgers.jpg" alt="Rutgers">
-                        <h3>Rutgers Info Widget</h3>
+                        <a href="https://thomwint.github.io/GIFTastic/" target="_blank"><h3>Rutgers Info Widget</h3></a>
                     </div>
                 </div>
 
