added train scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,13 +74,19 @@
 
             </div>
             <div class="row">
-                <div class="col-sm">
+                <div class="col-sm-4">
                     <div class="projects">
                         <img src="assets/images/DFP-RockPaperScissors-Black.png" alt="Rock Paper Scissors">
                         <h3>Rock Paper Scissors</h3>
                     </div>
                 </div>
-                <div class="col-5"></div>
+                <div class="col-sm-2"></div>
+                <div class="col-sm-4">
+                    <div class="projects">
+                        <img src="assets/images/rutgers.jpg" alt="train">
+                        <a href="https://thomwint.github.io/Train_Scheduler/" target="_blank"><h3>Train Scheduler</h3></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
